# Simple-Client-Server-Framework

./: CMakeLists.txt  LICENSE
client/: CMakeLists.txt  client_test.cpp
docs/: README.md
include/: net.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_ts_queue.h
server/: CMakeLists.txt  server_test.cpp
